@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.7.4) unstable; urgency=low
 
   * measure the latency of external resources
+  * widget-http: partially revert "don't query session if !stateful"
 
  --
 
